--- a/workshops/curriculum-outline.html
+++ b/workshops/curriculum-outline.html
@@ -11,3 +11,4 @@
 <h3>Introduction to JavaScript</h3>
 <p>JavaScript adds interactivity to a webpage</p>
 <h3>What is java script</h3>
+<p>Java script is a high level programming language alongside HTML and CSS</p>
